--- a/src/templates/administracion/subir_material.html
+++ b/src/templates/administracion/subir_material.html
@@ -104,7 +104,7 @@
         font-size: 1rem;
         transition: all 0.3s ease;
         background: #f8fafc;
-        font-family: 'Inter', sans-serif;
+        font-family: 'Be Vietnam Pro', sans-serif;
     }
     
     #{{ form.nombre_archivo.id_for_label }}:focus, #{{ form.descripcion.id_for_label }}:focus, #{{ form.tipo.id_for_label }}:focus, #{{ form.archivo.id_for_label }}:focus, #{{ form.enlace.id_for_label }}:focus {
