--- a/src/templates/registration/password_reset_confirm.html
+++ b/src/templates/registration/password_reset_confirm.html
@@ -31,7 +31,7 @@
         color: #667eea;
         font-size: 2rem;
         margin-bottom: 0.5rem;
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Be Vietnam Pro', sans-serif;
     }
     
     .reset-header p {
