consistencia de los modales de registro  y login falta verificar completamente

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -284,6 +284,7 @@
         <div class="navbar-content">
             <a href="{% url 'landing' %}" class="navbar-logo">
                 <img src="{% static 'img/polocreativoblanco.png' %}" alt="Logo Polo">
+                <h1>Edu-Polo</h1>
             </a>
 
             <div class="navbar-links">
