--- a/src/templates/cursos_por_polo.html
+++ b/src/templates/cursos_por_polo.html
@@ -498,6 +498,8 @@
             padding: 0.8rem 2rem;
             border: 2px solid white;
             color: white;
+            position: relative;
+            z-index: 20;
             background: transparent;
             border-radius: 50px;
             font-weight: 700;
